fix background, text and alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,17 +1,17 @@
 h1,h2,h3,h4{
 font-family: Verdana;
 text-align: center;
-color: white;
 }
 h1.header{
   font-style: normal;
   font-size: 50px;
+  color: white;
 }
-#center h2{
+h2.center{
   font-weight:  300;
   font-size: 42px;
 }
-#center h3{
+ h3.center{
   font-size: 21px;
   color: gray;
 }
@@ -27,11 +27,11 @@ a{
 p{
   align-items: center;
 }
-#copyright{
+.copyright{
   color: gray;
   text-align: right;
 }
-.body{
+body{
   background-color: black;
   text-align: center;
 }
